--- a/project.css
+++ b/project.css
@@ -14,8 +14,11 @@ html, body {
 
 ul {
 	list-style-type: none;
-	margin: 0;
-	padding: 0;
+	margin: 1px;
+	padding: 1px;
+	position: fixed;
+	height: 80%;
+	width: 300px;
 }
 
 /* remove underlines and change text color */
@@ -33,11 +36,12 @@ li a {
 	display: block;
 	font-size: 20px;
 	color: white;
+	border: 4px;
 }
 
 /* background color */
 body {
-	background-color: #17252A;
+	background-color:  #454545;
 }
 
 
@@ -87,6 +91,21 @@ h1 {
 				padding-left: 20%;
 				padding-right: 20%;
 			}
+
+footer {
+	display: block;
+	color: white;
+	text-align: center;
+	height: 25px;
+}
+
+img {
+	width: 100%;
+	height: 20%;
+}
+
+
+
 
 
 
