--- a/project.css
+++ b/project.css
@@ -14,11 +14,8 @@ html, body {
 
 ul {
 	list-style-type: none;
-	margin: 1px;
-	padding: 1px;
-	position: fixed;
-	height: 80%;
-	width: 300px;
+	margin: 0px;
+	padding: 0px;
 }
 
 /* remove underlines and change text color */
@@ -52,8 +49,39 @@ h1 {
 
 
 
+footer {
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 15px;
+	font-size: 20px;
+}
+
+img {
+	width: 100%;	
+}
+
+
+.hamburger {	
+    width: 30px;
+	display: inline-block;
+	max-height: 50px;
+}
+
+.hamburger * {	
+    width: 30px;
+    height: 3px;
+    background-color: white;
+    margin-top: 5px;
+	content: "";
+}
+
+
+
+
 			.column {
 				float: left;
+				position: relative;
 			}
 
 			/* Clear floats after the columns */
@@ -63,14 +91,13 @@ h1 {
 				clear: both;
 			}
 		
-			.side-menu {
-				width: 20%;
-				min-height: 100vh;
+			.side-menu ul {
+				width: 100%;
 			}
-			
 			.side-menu li {
 				border-bottom: 1px solid gray;
 				border-top: 1px solid gray;
+				width: 100%;
 			}
 			
 			.side-menu li a {
@@ -79,9 +106,14 @@ h1 {
 			
 			
 			
+			.side-menu {
+				width: 20%;
+				height: 100vh;
+			}
+			
 			.content {
 				width: 80%;
-				min-height: 100vh;
+				height: 100vh;
 				background-color: white;
 				display: inline-block;
 				color: black;				
@@ -92,23 +124,25 @@ h1 {
 				padding-right: 20%;
 			}
 
-footer {
-	display: block;
-	color: white;
-	text-align: center;
-	height: 25px;
-}
-
-img {
-	width: 100%;
-	height: 20%;
-}
 
 
-
-
-
-
+			@media only screen and (max-width: 768px) {
+				.side-menu {
+					height: auto;
+				}
+				.side-menu, .content {
+					width: 100%;
+				}
+				
+				.pages {
+					display: none;
+				}
+				
+				.content p {
+					padding-left: 10px;
+					padding-right: 10px;
+				}
+			}
 
 
 
