--- a/project.css
+++ b/project.css
@@ -10,6 +10,8 @@ html, body {
 
 
 
+
+
 /* design for the navigation bar */
 
 ul {
@@ -24,7 +26,7 @@ a:link {
 	text-decoration: none;
 }
 
-a:hover {
+.active, a:hover {
 	background-color: grey;
 }
 
@@ -113,17 +115,19 @@ img {
 			
 			.content {
 				width: 80%;
-				height: 100vh;
+				min-height: 100vh;
 				background-color: white;
 				display: inline-block;
-				color: black;				
+				color: black;
+				padding-bottom: 20px;
 			}
 			
-			.content p {
+			.center, .content p {
 				padding-left: 20%;
 				padding-right: 20%;
 			}
 
+			
 
 
 			@media only screen and (max-width: 768px) {
@@ -138,12 +142,22 @@ img {
 					display: none;
 				}
 				
-				.content p {
+				.center, .content p {
 					padding-left: 10px;
 					padding-right: 10px;
+					
+					font-size: 20px;
+				}
+				
+				#editor {
+					font-size: 20px;
 				}
 			}
 
 
 
-
+#editor {
+	width: 100%;
+	height: 300px;
+	min-height: 200px;
+}
